Fix MemTracker unit test - Revert to use deprecated constructor as mentioned in comment, but add annotation to suppress IntelliJ warning