@@ -467,8 +467,8 @@ public class MemTracker
 
             // Intentional use of deprecated constructor below because we want distinct instances of the same integer;
             // Integer.valueOf() will return the same object.
-            Object b = Integer.valueOf(1);
-            Object c = Integer.valueOf(1);
+            @SuppressWarnings({"deprecation", "CachedNumberConstructorCall"}) Object b = new Integer(1);
+            @SuppressWarnings({"deprecation", "CachedNumberConstructorCall"}) Object c = new Integer(1);
             assertNotSame(b, c);
             assertEquals(b, c);
             t._put(b);
